--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Index.cshtml
@@ -11,26 +11,30 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img src="~/img/carousel-1.jpg" class="img-fluid" alt="First slide">
+                <img src="~/imag/imagen3.jpeg" class="img-fluid" alt="First slide">
                 <div class="carousel-caption">
                     <div class="container carousel-content">
-                        <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
-                        <h1 class="text-white display-1 mb-4 animated fadeInRight">Fundamentos de la Programación</h1>
-                        <p class="mb-4 text-white fs-5 animated fadeInDown">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt.</p>
-                        <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
-                        <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
+                        <h6 class="text-secondary h4 animated fadeInUp">Selección Premium</h6>
+                        <h2 class="text-white display-1 mb-4 animated fadeInRight">Licoreria Neos</h2>
+                        <p class="mb-4 text-white fs-5 animated fadeInDown">"Descubre una selección de variedad de licores para toda ocasión" </p>
+                        <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Leer mas</button></a>
+                        <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contactos Sucre</button></a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="~/img/carousel-2.jpg" class="img-fluid" alt="Second slide">
+                <img src="~/imag/imagen6.jpg" class="img-fluid" alt="Second slide">
                 <div class="carousel-caption">
                     <div class="container carousel-content">
-                        <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
-                        <h1 class="text-white display-1 mb-4 animated fadeInLeft">Fundamentos de la Programación</h1>
-                        <p class="mb-4 text-white fs-5 animated fadeInDown">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt.</p>
-                        <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
-                        <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
+                        <h6 class="text-secondary h4 animated fadeInUp">Consumo Responsable de Vevidas </h6>
+                        <h2 class="text-white display-1 mb-4 animated fadeInLeft">Licoreria Neos</h2>
+                        <p class="mb-4 text-white fs-5 animated fadeInDown"> El primer paso hacia un consumo responsable y una vida equilibrada.</p>
+                        <a href="https://www.bupasalud.com.bo/salud/dependencia-del-alcohol" class="me-2">
+                            <button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Leer más</button>
+                        </a>
+                        <a href="https://www.eluniversal.com.mx/nacion/sociedad/programa-en-linea-ayudara-alcoholicos-dejar-de-beber/" class="me-2">
+                            <button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Busca Ayuda</button>
+                        </a>
                     </div>
                 </div>
             </div>
