--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a>Sucre - Bolivia</small>
                     <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>sis457@Neos.com</small>
                 </div>
-                <div id="note" class="text-secondary d-none d-xl-flex"><small>Note : We help you to Grow your Business</small></div>
+                <div id="note" class="text-secondary d-none d-xl-flex"><small> Web Licoreria Ventas</small></div>
                 <div class="top-link">
                     <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-facebook-f text-primary"></i></a>
                     <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-twitter text-primary"></i></a>
@@ -54,7 +54,7 @@
         <div class="container">
             <nav class="navbar navbar-dark navbar-expand-lg py-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white fw-bold d-block">Web<span class="text-secondary">Licoreria Neos</span> </h1>
+                    <h2 class="text-white fw-bold d-block">Neos<span class="text-secondary">Licoreria </span> </h2>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -67,20 +67,22 @@
                         {
                             <a asp-controller="Categorias" asp-action="Index" class="nav-item nav-link">Categorias</a>
                             <a asp-controller="Productos" asp-action="Index" class="nav-item nav-link">Productos</a>
-                            <a asp-controller="Ventas" asp-action="Index" class="nav-item nav-link">Ventas</a>
-                            <a asp-controller="VentaDetalles" asp-action="Index" class="nav-item nav-link">Detalle de ventas</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ventas</a>
+                                <div class="dropdown-menu rounded">
+                                    <a asp-controller="ventas" asp-action="Index" class="dropdown-item">Ventas</a>
+                                    <a asp-controller="VentaDetalles" asp-action="Index" class="dropdown-item">Detalles de venta</a>
+                                </div>
+                            </div>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Administradores</a>
                                 <div class="dropdown-menu rounded">
                                     <a asp-controller="Empleados" asp-action="Index" class="dropdown-item">Empleados</a>
                                     <a asp-controller="Usuarios" asp-action="Index" class="dropdown-item">Usuarios</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div>
                         }
                         <a asp-controller="Home" asp-action="Privacy" class="nav-item nav-link">Privacidad</a>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
                 <div class="d-none d-xl-flex flex-shirink-0">
@@ -93,8 +95,8 @@
                         </a>
                     </div>
                     <div class="d-flex flex-column pe-4 border-end">
-                        <span class="text-white-50">Have any questions?</span>
-                        <span class="text-secondary">Call: + 0123 456 7890</span>
+                        <span class="text-white-50">Tienes alguna pregunta</span>
+                        <span class="text-secondary">Contactos: 75457462  78569841</span>
                     </div>
                     <div class="d-flex align-items-center justify-content-center ms-4 ">
                         @if (User.Identity?.IsAuthenticated == false)
@@ -120,9 +122,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <a href="index.html">
-                        <h1 class="text-white fw-bold d-block">Web<span class="text-secondary">Minerva</span> </h1>
+                        <h1 class="text-white fw-bold d-block">Web<span class="text-secondary">Neos Licoreria</span> </h1>
                     </a>
-                    <p class="mt-4 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facere delectus qui placeat inventore consectetur repellendus optio debitis.</p>
+                    <p class="mt-4 text-light">Descubre un mundo de sabores en Neos, tu licorería de vanguardia.</p>
                     <div class="d-flex hightech-link">
                         <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-facebook-f text-primary"></i></a>
                         <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-twitter text-primary"></i></a>
@@ -131,42 +133,38 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <a href="#" class="h3 text-secondary">Short Link</a>
+                    <a href="#" class="h3 text-secondary">Enlaces</a>
                     <div class="mt-4 d-flex flex-column short-link">
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>About us</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Services</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Projects</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
+                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Inicio</a>
+                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contactos</a>
+                        
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <a href="#" class="h3 text-secondary">Help Link</a>
+                    <a href="#" class="h3 text-secondary">Enlace de ayuda</a>
                     <div class="mt-4 d-flex flex-column help-link">
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terms Of use</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacy Policy</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Helps</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>FQAs</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact</a>
+                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terminos de uso</a>
+                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacidad</a>
+                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contactos</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <a href="#" class="h3 text-secondary">Contact Us</a>
+                    <a href="#" class="h3 text-secondary">Contactos Sucre</a>
                     <div class="text-white mt-4 d-flex flex-column contact-link">
-                        <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> 123 Street, New York, USA</a>
-                        <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +123 456 7890</a>
-                        <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> info@exmple.con</a>
+                        <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Avaroa #16 Sucre - Bolivia</a>
+                        <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> 75457462 - 78569841</a>
+                        <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> sis457@Neos.com</a>
                     </div>
                 </div>
             </div>
             <hr class="text-light mt-5 mb-4">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Your Site Name</a>, All right reserved.</span>
+                    <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Licoreria Neos</a>, Todos los derechos reservados.</span>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    <span class="text-light">Designed By<a href="https://htmlcodex.com" class="text-secondary">HTML Codex</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a></span>
+                    <span class="text-light">Diseñado por<a href="https://htmlcodex.com" class="text-secondary"> Jhonny Condori - Saul Beisaga </a> Distribuido por <a href="https://themewagon.com"> Sis457</a></span>
                 </div>
             </div>
         </div>
