--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Productos/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Productos/Index.cshtml
@@ -5,38 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Productos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Precio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UsuarioRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdCategoriaNavigation)
-            </th>
+            <th>Código</th>
+            <th>Nombre</th>
+            <th>Descripción</th>
+            <th>Precio Bs.</th>
+            <th>Usuario de Registro</th>
+            <th>Fecha de Registro</th>
+            <th>Estado</th>
+            <th>Id de Categoria</th>
             <th></th>
         </tr>
     </thead>
@@ -68,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.IdCategoriaNavigation.IdCategoria)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdProducto">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdProducto">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdProducto">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdProducto">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.IdProducto">Mostrar</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdProducto">Eliminar</a>
             </td>
         </tr>
 }
