--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Index.cshtml
@@ -5,32 +5,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Usuarios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Clave)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UsuarioRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdEmpleadoNavigation)
-            </th>
+            <th>Usuario </th>
+            <th>Contraseña  </th>
+            <th>Usuario de Registro </th>
+            <th>Fecha de Registro </th>
+            <th>Estado</th>
+            <th>Id de Empleado </th>
             <th></th>
         </tr>
     </thead>
@@ -56,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.IdEmpleadoNavigation.IdEmpleado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdUsuario">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdUsuario">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdUsuario">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdUsuario">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.IdUsuario">Mostrar</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdUsuario">Eliminar</a>
             </td>
         </tr>
 }
