--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Index.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Productos</h1>
+<h1>Categorías</h1>
 
 <p>
-    <a asp-action="Create">Crear nuevo</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>Nombre</th>
-            <th>UsuarioRegistro</th>
-            <th>FechaRegistro</th>
+            <th>Usuario de Registro</th>
+            <th>Fecha de Registro</th>
             <th>Estado</th>
             <th></th>
         </tr>
