--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Create.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver a lista</a>
+    <a asp-action="Index">Volver a Lista</a>
 </div>
 
 @section Scripts {
