--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Index.cshtml
@@ -36,9 +36,9 @@
                 @Html.DisplayFor(modelItem => item.Estado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdCategoria">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.IdCategoria">Detalle</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdCategoria">Eliminar</a>
+                <a asp-action="Details" asp-route-id="@item.IdCategoria" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver"><i class="fas fa-eye me-2"></i></a>
+                <a asp-action="Edit" asp-route-id="@item.IdCategoria" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar"><i class="fas fa-edit me-2"></i></a>
+                <a asp-action="Delete" asp-route-id="@item.IdCategoria" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Eliminar"><i class="fas fa-trash me-2"></i></a>
             </td>
         </tr>
 }
