--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Delete.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Delete.cshtml
@@ -5,46 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Elimnar Clientes</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro que quiere eliminar venta de detalle?</h3>
 <div>
-    <h4>Cliente</h4>
+   
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RazonSocial)
-        </dt>
+        <dt class = "col-sm-2">Razon Social</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RazonSocial)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CedulaIdentidad)
-        </dt>
+        <dt class = "col-sm-2">Cedula de Identidad</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CedulaIdentidad)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
+        <dt class = "col-sm-2">Celular</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Celular)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioRegistro)
-        </dt>
+        <dt class = "col-sm-2">Usuario de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UsuarioRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
+        <dt class = "col-sm-2">Fecha de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
+        <dt class = "col-sm-2">Estado </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
@@ -52,7 +40,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la Lista</a>
     </form>
 </div>
