--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Delete.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Delete.cshtml
@@ -5,58 +5,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar Empleado</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro que quiere eliminar venta de detalle?</h3>
 <div>
-    <h4>Empleado</h4>
+    
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
+        <dt class = "col-sm-2">Nombres</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellidos)
-        </dt>
+        <dt class = "col-sm-2">Apellidos </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Apellidos)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
+        <dt class = "col-sm-2">Teléfono</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Telefono)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cargo)
-        </dt>
+        <dt class = "col-sm-2">Cargo</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Cargo)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Salario)
-        </dt>
+        <dt class = "col-sm-2">Cargo</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Salario)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioRegistro)
-        </dt>
+        <dt class = "col-sm-2">Usuario de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UsuarioRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
+        <dt class = "col-sm-2">Fecha de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
+        <dt class = "col-sm-2">Estado</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
@@ -64,7 +48,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdEmpleado" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimninar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la Lista</a>
     </form>
 </div>
