--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Productos/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Productos/Index.cshtml
@@ -52,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.IdCategoriaNavigation.IdCategoria)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdProducto">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.IdProducto">Mostrar</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdProducto">Eliminar</a>
+                    <a asp-action="Details" asp-route-id="@item.IdProducto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver"><i class="fas fa-eye me-2"></i></a>
+                    <a asp-action="Edit" asp-route-id="@item.IdProducto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar"><i class="fas fa-edit me-2"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.IdProducto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Eliminar"><i class="fas fa-trash me-2"></i></a>
             </td>
         </tr>
 }
