--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Create.cshtml
@@ -5,46 +5,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Crear Venta de Detalle</h1>
 
-<h4>VentaDetalle</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdVenta" class="control-label"></label>
+                <label  class="control-label">Id de Venta de Detalle</label>
                 <select asp-for="IdVenta" class ="form-control" asp-items="ViewBag.IdVenta"></select>
             </div>
             <div class="form-group">
-                <label asp-for="IdProducto" class="control-label"></label>
+                <label  class="control-label">Id de Producto</label>
                 <select asp-for="IdProducto" class ="form-control" asp-items="ViewBag.IdProducto"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Cantidad" class="control-label"></label>
+                <label  class="control-label">Cantidad</label>
                 <input asp-for="Cantidad" class="form-control" />
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PrecioUnitario" class="control-label"></label>
+                <label  class="control-label">Precio Unitario</label>
                 <input asp-for="PrecioUnitario" class="form-control" />
                 <span asp-validation-for="PrecioUnitario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
+                <label  class="control-label">Total</label>
                 <input asp-for="Total" class="form-control" />
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la Lista</a>
 </div>
 
 @section Scripts {
