--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Delete.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Delete.cshtml
@@ -5,58 +5,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar Detalle de Venta</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro que quiere eliminar venta de detalle?</h3>
 <div>
-    <h4>VentaDetalle</h4>
+   
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cantidad)
-        </dt>
+        <dt class = "col-sm-2">Cantidad</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Cantidad)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrecioUnitario)
-        </dt>
+        <dt class="col-sm-2">Precio Unitario</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PrecioUnitario)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
+        <dt class = "col-sm-2">Total</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Total)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioRegistro)
-        </dt>
+        <dt class = "col-sm-2">Usuario de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UsuarioRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
+        <dt class = "col-sm-2">Fecha de Registro</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
+        <dt class = "col-sm-2">Estado</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdProductoNavigation)
-        </dt>
+        <dt class = "col-sm-2">Id de Producto</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdProductoNavigation.IdProducto)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdVentaNavigation)
-        </dt>
+        <dt class = "col-sm-2">Id de Venta</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdVentaNavigation.Id)
         </dd>
@@ -64,7 +48,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la Lista</a>
     </form>
 </div>
