--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Edit.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Edit.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>VentaDetalle</h4>
+<h1>Editar Detalle de Venta</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,54 +13,45 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="IdVenta" class="control-label"></label>
+                <label  class="control-label">id de Venta</label>
                 <select asp-for="IdVenta" class="form-control" asp-items="ViewBag.IdVenta"></select>
                 <span asp-validation-for="IdVenta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdProducto" class="control-label"></label>
+                <label  class="control-label">Id de Producto</label>
                 <select asp-for="IdProducto" class="form-control" asp-items="ViewBag.IdProducto"></select>
                 <span asp-validation-for="IdProducto" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cantidad" class="control-label"></label>
+                <label  class="control-label">Cantidad</label>
                 <input asp-for="Cantidad" class="form-control" />
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PrecioUnitario" class="control-label"></label>
+                <label  class="control-label">Precio Unitario</label>
                 <input asp-for="PrecioUnitario" class="form-control" />
                 <span asp-validation-for="PrecioUnitario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
+                <label class="control-label">Total</label>
                 <input asp-for="Total" class="form-control" />
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
+            
+             <input type="hidden" asp-for="UsuarioRegistro" />
+            <input type="hidden" asp-for="FechaRegistro" />
+            <input type="hidden" asp-for="Estado" />
+         
+
             <div class="form-group">
-                <label asp-for="UsuarioRegistro" class="control-label"></label>
-                <input asp-for="UsuarioRegistro" class="form-control" />
-                <span asp-validation-for="UsuarioRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la Lista</a>
 </div>
 
 @section Scripts {
