--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Create.cshtml
@@ -5,36 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Ventum</h4>
+<h1>Crear Ventas</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdUsuario" class="control-label"></label>
+                <label  class="control-label">Id de Usuario</label>
                 <select asp-for="IdUsuario" class ="form-control" asp-items="ViewBag.IdUsuario"></select>
             </div>
             <div class="form-group">
-                <label asp-for="IdCliente" class="control-label"></label>
+                <label  class="control-label">Id de Cliente</label>
                 <select asp-for="IdCliente" class ="form-control" asp-items="ViewBag.IdCliente"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TotalVenta" class="control-label"></label>
+                <label  class="control-label">Total de Venta</label>
                 <input asp-for="TotalVenta" class="form-control" />
                 <span asp-validation-for="TotalVenta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a Lista</a>
 </div>
 
 @section Scripts {
