--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Details.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Details.cshtml
@@ -5,57 +5,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Detalle de Venta</h1>
 
 <div>
-    <h4>Ventum</h4>
+   
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalVenta)
-        </dt>
+        <dt class = "col-sm-2">Total de Venta</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TotalVenta)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaVenta)
-        </dt>
+        <dt class = "col-sm-2">Fecha de Venta</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaVenta)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioRegistro)
-        </dt>
+        <dt class = "col-sm-2">Usuario de Registro </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UsuarioRegistro)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
+        <dt class = "col-sm-2">Fecha de Registro</dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaRegistro)
+            
+            @Model.FechaRegistro.ToLongDateString()
+            @Model.FechaRegistro.ToShortDateString()
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
+        <dt class = "col-sm-2">Estado</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdClienteNavigation)
-        </dt>
+        <dt class = "col-sm-2">Id de Cliente</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdClienteNavigation.Id)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
-        </dt>
+        <dt class = "col-sm-2">Id de Usuario</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdUsuarioNavigation.IdUsuario)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index">Volver a la Lista</a>
 </div>
