--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Edit.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Ventas/Edit.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Ventum</h4>
+<h1>Editar Venta</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,49 +13,41 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="IdUsuario" class="control-label"></label>
+                <label  class="control-label">Id de Usuario</label>
                 <select asp-for="IdUsuario" class="form-control" asp-items="ViewBag.IdUsuario"></select>
                 <span asp-validation-for="IdUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdCliente" class="control-label"></label>
+                <label  class="control-label">Id de Cliente</label>
                 <select asp-for="IdCliente" class="form-control" asp-items="ViewBag.IdCliente"></select>
                 <span asp-validation-for="IdCliente" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalVenta" class="control-label"></label>
+                <label  class="control-label">Totla de Venta</label>
                 <input asp-for="TotalVenta" class="form-control" />
                 <span asp-validation-for="TotalVenta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaVenta" class="control-label"></label>
+                <label  class="control-label">Fecha de Venta</label>
                 <input asp-for="FechaVenta" class="form-control" />
                 <span asp-validation-for="FechaVenta" class="text-danger"></span>
             </div>
+            
+            <input type="hidden" asp-for="UsuarioRegistro" />
+            <input type="hidden" asp-for="FechaRegistro" />
+            <input type="hidden" asp-for="Estado" />
+            <input type="hidden" asp-for="UsuarioRegistro" />
+
+            
             <div class="form-group">
-                <label asp-for="UsuarioRegistro" class="control-label"></label>
-                <input asp-for="UsuarioRegistro" class="form-control" />
-                <span asp-validation-for="UsuarioRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la Lista</a>
 </div>
 
 @section Scripts {
