--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 <img src="~/imag/imagen6.jpg" class="img-fluid" alt="Second slide">
                 <div class="carousel-caption">
                     <div class="container carousel-content">
-                        <h6 class="text-secondary h4 animated fadeInUp">Consumo Responsable de Vevidas </h6>
+                        <h6 class="text-secondary h4 animated fadeInUp">Consumo Responsable de Bebidas </h6>
                         <h2 class="text-white display-1 mb-4 animated fadeInLeft">Licoreria Neos</h2>
                         <p class="mb-4 text-white fs-5 animated fadeInDown"> El primer paso hacia un consumo responsable y una vida equilibrada.</p>
                         <a href="https://www.bupasalud.com.bo/salud/dependencia-del-alcohol" class="me-2">
@@ -69,7 +69,7 @@
             <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
                 <div class="d-flex counter">
                     <h1 class="me-3 text-primary text-white mt-1"> 5%</h1>
-                    <h5 class="text-white mt-1">Descuentos de Vodkas</h5>
+                    <h5 class="text-white mt-1">Descuentos en Vodka</h5>
                 </div>
             </div>
             <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
@@ -97,7 +97,7 @@
                         <div class="project-content">
                             <a href="#" class="text-center">
                                 <h4 class="text-secondary">Categoria</h4>
-                                <p class="m-0 text-white">Cervesa</p>
+                                <p class="m-0 text-white">Cerveza</p>
                             </a>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                         <div class="blog-icon btn btn-secondary px-3 rounded-pill my-auto">
                             <a href="" class="btn text-white" style="font-size: 12px; padding: 5px 10px;">Leer más</a>
                         </div>
-                            <div class="blog-btn-icon btn btn-secondary px-3 py-2 rounded-pill" style="font-size: 9px; display: flex; align-items: center; justify-content: center;">
+                        <div class="blog-btn-icon btn btn-secondary px-3 py-2 rounded-pill" style="font-size: 9px; display: flex; align-items: center; justify-content: center;">
                             <div class="blog-icon-1">
                                 <p class="text-white px-2 m-0" style="font-size: 12px;">Compartir <i class="fa fa-arrow-right ms-1"></i></p>
                             </div>
@@ -281,19 +281,19 @@
 <div class="container-fluid py-5 mb-5 team">
     <div class="container">
         <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-            <h5 class="text-primary">Our Team</h5>
-            <h1>Meet our expert Team</h1>
+            <h5 class="text-primary">Lo más vendido </h5>
+            <h1>Productos mas Vendidos</h1>
         </div>
         <div class="owl-carousel team-carousel wow fadeIn" data-wow-delay=".5s">
             <div class="rounded team-item">
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="~/img/team-1.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="~/imag/paceña.jpeg" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
-                            <h4 class="">Full Name</h4>
-                            <p class="m-0">Designation</p>
+                            <h4 class="">Paceña</h4>
+                            <p class="m-0">cerveza </p>
                         </div>
                         <div class="team-icon d-flex justify-content-center pb-4">
                             <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -308,11 +308,11 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="~/img/team-2.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="~/imag/stark.png" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
-                            <h4 class="">Full Name</h4>
-                            <p class="m-0">Designation</p>
+                            <h4 class="">Stark</h4>
+                            <p class="m-0">Vodka</p>
                         </div>
                         <div class="team-icon d-flex justify-content-center pb-4">
                             <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -327,11 +327,11 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="~/img/team-3.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="~/imag/toro.jpeg" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
-                            <h4 class="">Full Name</h4>
-                            <p class="m-0">Designation</p>
+                            <h4 class="">Toro Viejo</h4>
+                            <p class="m-0">Vino</p>
                         </div>
                         <div class="team-icon d-flex justify-content-center pb-4">
                             <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -346,11 +346,11 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="~/img/team-4.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="~/imag/abuelo.jpeg" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
-                            <h4 class="">Full Name</h4>
-                            <p class="m-0">Designation</p>
+                            <h4 class="">Ron Abuelo</h4>
+                            <p class="m-0">Ron</p>
                         </div>
                         <div class="team-icon d-flex justify-content-center pb-4">
                             <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -365,110 +365,12 @@
     </div>
 </div>
 <!-- Team End -->
-<!-- Testimonial Start -->
-<div class="container-fluid testimonial py-5 mb-5">
-    <div class="container">
-        <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-            <h5 class="text-primary">Our Testimonial</h5>
-            <h1>Our Client Saying!</h1>
-        </div>
-        <div class="owl-carousel testimonial-carousel wow fadeIn" data-wow-delay=".5s">
-            <div class="testimonial-item border p-4">
-                <div class="d-flex align-items-center">
-                    <div class="">
-                        <img src="~/img/testimonial-1.jpg" alt="">
-                    </div>
-                    <div class="ms-4">
-                        <h4 class="text-secondary">Client Name</h4>
-                        <p class="m-0 pb-3">Profession</p>
-                        <div class="d-flex pe-5">
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-top mt-4 pt-3">
-                    <p class="mb-0">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum aliquam dolor eget urna. Nam volutpat libero sit amet leo cursus, ac viverra eros morbi quis quam mi.</p>
-                </div>
-            </div>
-            <div class="testimonial-item border p-4">
-                <div class=" d-flex align-items-center">
-                    <div class="">
-                        <img src="~/img/testimonial-2.jpg" alt="">
-                    </div>
-                    <div class="ms-4">
-                        <h4 class="text-secondary">Client Name</h4>
-                        <p class="m-0 pb-3">Profession</p>
-                        <div class="d-flex pe-5">
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-top mt-4 pt-3">
-                    <p class="mb-0">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum aliquam dolor eget urna. Nam volutpat libero sit amet leo cursus, ac viverra eros morbi quis quam mi.</p>
-                </div>
-            </div>
-            <div class="testimonial-item border p-4">
-                <div class=" d-flex align-items-center">
-                    <div class="">
-                        <img src="~/img/testimonial-3.jpg" alt="">
-                    </div>
-                    <div class="ms-4">
-                        <h4 class="text-secondary">Client Name</h4>
-                        <p class="m-0 pb-3">Profession</p>
-                        <div class="d-flex pe-5">
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-top mt-4 pt-3">
-                    <p class="mb-0">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum aliquam dolor eget urna. Nam volutpat libero sit amet leo cursus, ac viverra eros morbi quis quam mi.</p>
-                </div>
-            </div>
-            <div class="testimonial-item border p-4">
-                <div class=" d-flex align-items-center">
-                    <div class="">
-                        <img src="~/img/testimonial-4.jpg" alt="">
-                    </div>
-                    <div class="ms-4">
-                        <h4 class="text-secondary">Client Name</h4>
-                        <p class="m-0 pb-3">Profession</p>
-                        <div class="d-flex pe-5">
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                            <i class="fas fa-star me-1 text-primary"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-top mt-4 pt-3">
-                    <p class="mb-0">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum aliquam dolor eget urna. Nam volutpat libero sit amet leo cursus, ac viverra eros morbi quis quam mi.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Testimonial End -->
 <!-- Contact Start -->
 <div class="container-fluid py-5 mb-5">
     <div class="container">
         <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-            <h5 class="text-primary">Get In Touch</h5>
-            <h1 class="mb-3">Contact for any query</h1>
-            <p class="mb-2">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+            <h5 class="text-primary">Ponte en contacto</h5>
+            <h1 class="mb-3">Puedes contactarme para cualquier consulta</h1>
         </div>
         <div class="contact-detail position-relative p-5">
             <div class="row g-5 mb-5 justify-content-center">
@@ -478,8 +380,8 @@
                             <i class="fas fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h4 class="text-primary">Address</h4>
-                            <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">23 rank Str, NY</a>
+                            <h4 class="text-primary">Ubicacón</h4>
+                            <a href="https://www.google.com/maps/search/25+de+mayo,+Sucre" target="_blank" class="h5">Sucre - Bolivia</a>
                         </div>
                     </div>
                 </div>
@@ -489,8 +391,8 @@
                             <i class="fa fa-phone text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h4 class="text-primary">Call Us</h4>
-                            <a class="h5" href="tel:+0123456789" target="_blank">+012 3456 7890</a>
+                            <h4 class="text-primary">Contacto Sucre</h4>
+                            <a class="h5" href="tel:+59175457461" target="_blank">75457461</a>
                         </div>
                     </div>
                 </div>
@@ -500,8 +402,8 @@
                             <i class="fa fa-envelope text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h4 class="text-primary">Email Us</h4>
-                            <a class="h5" href="mailto:info@example.com" target="_blank">info@example.com</a>
+                            <h4 class="text-primary">Email Sucre </h4>
+                            <a class="h5" href="mailto:jhonnyc0023@gmail.com" target="_blank">neos@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -515,19 +417,19 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
                     <div class="p-5 rounded contact-form">
                         <div class="mb-4">
-                            <input type="text" class="form-control border-0 py-3" placeholder="Your Name">
+                            <input type="text" class="form-control border-0 py-3" placeholder="Nombre">
                         </div>
                         <div class="mb-4">
-                            <input type="email" class="form-control border-0 py-3" placeholder="Your Email">
+                            <input type="email" class="form-control border-0 py-3" placeholder=" Email">
                         </div>
                         <div class="mb-4">
-                            <input type="text" class="form-control border-0 py-3" placeholder="Project">
+                            <input type="text" class="form-control border-0 py-3" placeholder="Motivo">
                         </div>
                         <div class="mb-4">
-                            <textarea class="w-100 form-control border-0 py-3" rows="6" cols="10" placeholder="Message"></textarea>
+                            <textarea class="w-100 form-control border-0 py-3" rows="6" cols="10" placeholder="Mensage"></textarea>
                         </div>
                         <div class="text-start">
-                            <button class="btn bg-primary text-white py-3 px-5" type="button">Send Message</button>
+                            <button class="btn bg-primary text-white py-3 px-5" type="button">enviar Mensage</button>
                         </div>
                     </div>
                 </div>
