--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Privacy.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Home/Privacy.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Politicas de Privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Política de Privacidad de Neos Licorería en Línea
+    Recopilación de Información: Neos Licorería en Línea recopila información personal proporcionada por los usuarios al realizar compras, registrarse en el sitio web o suscribirse al boletín informativo. Esto puede incluir nombre, dirección, información de contacto y detalles de pago.
+    Uso de la Información: La información recopilada se utiliza para procesar pedidos, enviar notificaciones sobre el estado de los pedidos, personalizar la experiencia del usuario y enviar comunicaciones de marketing si el usuario ha dado su consentimiento.
+    Protección de la Información: Neos Licorería en Línea se compromete a proteger la información personal de los usuarios y toma medidas para garantizar la seguridad de los datos.
+    Divulgación a Terceros: Neos Licorería en Línea no vende, intercambia ni transfiere información personal a terceros, a menos que sea necesario para el cumplimiento de un pedido o requerido por ley.
+    Cookies y Tecnologías Similares: El sitio web de Neos Licorería en Línea puede utilizar cookies y tecnologías similares para mejorar la experiencia del usuario y recopilar información sobre el comportamiento de navegación..
+</p>
