--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
@@ -1,10 +1,9 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Licoreria Neos</title>
-    
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -113,7 +112,6 @@
         </div>
     </div>
     <!-- Navbar End -->
-
     @RenderBody()
 
     <!-- Footer Start -->
@@ -137,7 +135,7 @@
                     <div class="mt-4 d-flex flex-column short-link">
                         <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Inicio</a>
                         <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contactos</a>
-                        
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -170,7 +168,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fa fa-arrow-up text-white"></i></a>
 
