--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Index.cshtml
@@ -13,12 +13,11 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Razón Social</th>
+            <th>Nombre</th>
             <th>Cédula de Identidad</th>
             <th>Número de Celular</th>
             <th>Usuario de Registro </th>
             <th>Fecha de Registro</th>
-            <th>Estado</th>
             <th></th>
         </tr>
     </thead>
@@ -40,9 +39,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
+           
             <td>
                     <a asp-action="Details" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver"><i class="fas fa-eye me-2"></i></a>
                     <a asp-action="Edit" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar"><i class="fas fa-edit me-2"></i></a>
