--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Index.cshtml
@@ -25,17 +25,34 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>Nombres</td>
-            <td>Apellidos</td>
-            <td>Teléfono</td>
-            <td>Cargo</td>
-            <td>Salario</td>
-            <td>Usuario de Registro</td>
-            <td>Fecha de Registro</td>
-            <td>Estado</td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Apellidos)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefono)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cargo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Salario)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UsuarioRegistro)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaRegistro)
+                </td>
+                <td>
+                    @(item.Estado == 1 ? "Activo" : "Inactivo")
+                </td>
+                <td>
                     <a asp-action="Details" asp-route-id="@item.IdEmpleado" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver"><i class="fas fa-eye me-2"></i></a>
                     <a asp-action="Edit" asp-route-id="@item.IdEmpleado" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar"><i class="fas fa-edit me-2"></i></a>
                     <a asp-action="Delete" asp-route-id="@item.IdEmpleado" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Eliminar"><i class="fas fa-trash me-2"></i></a>
